objects/ASI_CRM_CalculatedSegmentation__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AccountsAdditionalField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet (Additional)</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Calculated Segmentation</relationshipLabel>
        <relationshipName>Calculated_Segmentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ExId__c</fullName>
        <label>Calculated Segmentation ExId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calculated Segmentation</relationshipLabel>
        <relationshipName>Calculated_Segmentation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SalesPotential__c</fullName>
        <label>Sales Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Calculated Segmentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_AccountsAdditionalField__c</columns>
        <columns>ASI_CRM_SalesPotential__c</columns>
        <columns>ASI_CRM_Date__c</columns>
        <columns>ASI_CRM_Grade__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{0000}</displayFormat>
        <label>Calculated Segmentation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated Segmentation</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_CalculatedSegmentation_RcrdTyp</fullName>
        <active>true</active>
        <label>ASI_CRM_TW Calculated Segmentation</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>